--- a/notebooks/simple_usage.ipynb
+++ b/notebooks/simple_usage.ipynb
@@ -36,32 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# x, y, theta, phi, lkx, lvx, lvy\n",
-    "params = np.array([8., 8., np.pi/2., 0., 2.*np.pi/2.8284271247461903 / 2., 2., 2.])"
+    "params = np.array([15., 15., np.pi/2., 0., 2.*np.pi/2.8284271247461903 / 2., 1., 1.])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x118827828>"
+       "(-0.5, 31.5, 31.5, -0.5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvFvnyVgAADvtJREFUeJzt3W+IXXV+x/H3x8kkOiYksTESE6m7\nkgcrSzfKEATLYnfbxcqCCt2iDxYfSCPLCgrbB8FC10IfuKUqfVCssYYNxeraqhiKtBvERfaJ62hj\nTDbd6kq6m03IKP7PqDHJtw/uCYxxzm/unHvPuTN+Py8Y5s753XPPNyfzmXPv+d77O4oIzCyfc0Zd\ngJmNhsNvlpTDb5aUw2+WlMNvlpTDb5aUw2+WlMNvlpTDb5bUskFWlnQt8A/AGPDPEXFP6f4TExOx\nZs2aQTbZOkkLXsfvkrTF4t1332VmZqavX+LG4Zc0Bvwj8CfAYeBFSbsj4pd166xZs4bbbrut6SY/\np43QnXPOwp8Mleo4ffp0Z3WUtLGvmvyhLHGNg3vwwQf7vu8gv2Fbgdcj4o2IOAE8Blw/wOOZWYcG\nCf9G4Lezfj5cLTOzJWCQ8M/1XOVzz4kkbZM0JWlqZmZmgM2Z2TANEv7DwCWzft4EHDn7ThGxIyIm\nI2JyYmJigM2Z2TANEv4Xgc2SviRpOXATsHs4ZZlZ2xqf7Y+Ik5JuB/6LXqtvZ0QcGFplAyqdlS2d\nXW1ylv3UqVONxprWUVrPbUfr10B9/oh4BnhmSLWYWYf8Dj+zpBx+s6QcfrOkHH6zpBx+s6QGOts/\naqUPzZTGli2r/2ePj4/Xjo2Njc25/Pjx47XrfPLJJwt+PCjXWGoD1rX6Si1Hy8lHfrOkHH6zpBx+\ns6QcfrOkHH6zpL6wZ/tPnjxZO1Y6y1762HFdJ6B0tv/DDz9c8OM1rQPg008/rR0zm81HfrOkHH6z\npBx+s6QcfrOkHH6zpBx+s6QWTauvybx0pQ+rfPzxx7Vjy5cvrx1bvXp17Vhd++3YsWO167z11lsL\nfjyACy+8sHbs3HPPrR2r21el1mfT+Q5tafOR3ywph98sKYffLCmH3ywph98sKYffLKmBWn2SDgEf\nAKeAkxExOcBjLXid0ifYSlcEXrVqVe1YqcVW1wY8cKD+KmVHjnzu2qXzPh7A5s2ba8dKLcK6lt5H\nH31Uu45bfTkNo8//RxFR38w2s0XJT/vNkho0/AH8VNJLkrYNoyAz68agT/uvjogjktYDeyT9T0Q8\nP/sO1R+FbVB+jWtm3RroyB8RR6rv08BTwNY57rMjIiYjYrJ0osrMutU4/JLOl7TqzG3gW8D+YRVm\nZu0a5Gn/RcBTVStoGfCvEfGfpRUk1baOmnyqr2mrr9TaWr9+fe1YqQ1Y5/Dhw7VjpUt5lZx33nm1\nY6WWXp3SRKil/xe3AZe2xuGPiDeArw2xFjPrkFt9Zkk5/GZJOfxmSTn8Zkk5/GZJLZoJPJsotfpK\nE3iWWltr166tHSu1AetMT0/Xji1bVr/7zzmn/u9yqdVXekyz2XzkN0vK4TdLyuE3S8rhN0vK4TdL\natGcGi6d3S6dna9TujxVSelSXqXLZNUpdR1KH+wpfWimdEa/yYdtSvt3bGxswY9nS4OP/GZJOfxm\nSTn8Zkk5/GZJOfxmSTn8ZkktmlZfk3ZeSdMPuJw4caJ2rK5tV5oTsNQeXLFiRe1Y6TFLbczSenVK\nbVb74vL/ullSDr9ZUg6/WVIOv1lSDr9ZUg6/WVLz9sMk7QS+DUxHxFerZRcAPwEuBQ4Bfx4R77RX\n5tzGx8drx0ottlJr65136v8ZTdqHpXn/SvMFllqfpUtyNf00o+XTz5H/x8C1Zy3bDjwbEZuBZ6uf\nzWwJmTf8EfE88PZZi68HdlW3dwE3DLkuM2tZ09f8F0XEUYDq+8LntDazkWr9hJ+kbZKmJE0dP368\n7c2ZWZ+ahv+YpA0A1ffaK1NExI6ImIyIyfPPP7/h5sxs2JqGfzdwS3X7FuDp4ZRjZl3pp9X3KHAN\nsE7SYeCHwD3A45JuBX4DfKefjUVE7afOmnwardTqm5iYqB0rTXJZurxWacLNOps2baodW7169YIf\nD8qtvtIlzOqUWp9NJgS1pWHe8EfEzTVD3xxyLWbWIb/Dzywph98sKYffLCmH3ywph98sqUUzgWep\n1Vc31kar780336wda/IOxYsvvrh2rFRjaX/MzMzUjtW1+tyys7P5yG+WlMNvlpTDb5aUw2+WlMNv\nlpTDb5bUkmj11RkbG6sdK03gWWp7vffee7VjpRZbnXXr1tWOlVqVpf1Rd81AaDaBp9uAOfnIb5aU\nw2+WlMNvlpTDb5aUw2+W1KI5299Eae650qW1Sme3S2f0S92FOitXrmz0eKWz/aV5+pp0TSwnH/nN\nknL4zZJy+M2ScvjNknL4zZJy+M2S6udyXTuBbwPTEfHVatndwF8AZya8uysinmmryDptXGaq1EZr\ncimsFStW1I41rfH06dO1Y271Wb/6OfL/GLh2juX3R8SW6qvz4JvZYOYNf0Q8D7zdQS1m1qFBXvPf\nLmmfpJ2S1g6tIjPrRNPwPwBcBmwBjgL31t1R0jZJU5KmmkyGYWbtaBT+iDgWEaci4jTwELC1cN8d\nETEZEZOli1SYWbcahV/Shlk/3gjsH045ZtaVflp9jwLXAOskHQZ+CFwjaQsQwCHgthZrbKSNNloT\nTT4JOB+382wY5g1/RNw8x+KHW6jFzDrkd/iZJeXwmyXl8Jsl5fCbJeXwmyW1pCfwbMOw22i+FJYt\nVj7ymyXl8Jsl5fCbJeXwmyXl8Jsl5fCbJeXwmyXl8Jsl5fCbJeXwmyXl8Jsl5fCbJeXwmyXl8Jsl\n5fCbJeXwmyXl8Jsl5fCbJeXwmyU1b/glXSLpOUkHJR2QdEe1/AJJeyS9Vn33ZbrNakiq/RqVfo78\nJ4EfRMRXgKuA70u6HNgOPBsRm4Fnq5/NbImYN/wRcTQiXq5ufwAcBDYC1wO7qrvtAm5oq0gzG74F\nveaXdClwBfACcFFEHIXeHwhg/bCLM7P29B1+SSuBJ4A7I+L9Bay3TdKUpKmZmZkmNZpZC/oKv6Rx\nesF/JCKerBYfk7ShGt8ATM+1bkTsiIjJiJicmJgYRs1mNgT9nO0X8DBwMCLumzW0G7ilun0L8PTw\nyzOztvRzua6rge8Cr0raWy27C7gHeFzSrcBvgO+0U6KZtWHe8EfEz4G6ZuQ3h1uOmXXF7/AzS8rh\nN0vK4TdLyuE3S8rhN0uqn1afmfVhlJ/Qa8JHfrOkHH6zpBx+s6QcfrOkHH6zpBx+s6Tc6jNbgKXW\nzivxkd8sKYffLCmH3ywph98sKYffLCmH3ywph98sKYffLCmH3ywph98sKYffLCmH3yypfq7Vd4mk\n5yQdlHRA0h3V8rsl/U7S3urruvbLNbNh6edTfSeBH0TEy5JWAS9J2lON3R8Rf99eeWbWln6u1XcU\nOFrd/kDSQWBj24WZWbsW9Jpf0qXAFcAL1aLbJe2TtFPS2iHXZmYt6jv8klYCTwB3RsT7wAPAZcAW\nes8M7q1Zb5ukKUlTMzMzQyjZzIahr/BLGqcX/Eci4kmAiDgWEaci4jTwELB1rnUjYkdETEbE5MTE\nxLDqNrMB9XO2X8DDwMGIuG/W8g2z7nYjsH/45ZlZW/o523818F3gVUl7q2V3ATdL2gIEcAi4rZUK\nzawV/Zzt/zkw16yFzwy/HDPrit/hZ5aUw2+WlMNvlpTDb5aUw2+WlC/XNQSlSzhFRIeV5PRFuoRW\nl3zkN0vK4TdLyuE3S8rhN0vK4TdLyuE3S8qtPls03LLrlo/8Zkk5/GZJOfxmSTn8Zkk5/GZJOfxm\nSTn8Zkk5/GZJOfxmSTn8Zkk5/GZJOfxmSfVzrb5zJf1C0iuSDkj6m2r5lyS9IOk1ST+RtLz9cq0p\nSbVfbaxni18/R/5PgG9ExNfoXY77WklXAT8C7o+IzcA7wK3tlWlmwzZv+KPnw+rH8eorgG8A/14t\n3wXc0EqFZtaKvl7zSxqrrtA7DewBfg28GxEnq7scBja2U6KZtaGv8EfEqYjYAmwCtgJfmetuc60r\naZukKUlTMzMzzSs1s6Fa0Nn+iHgX+BlwFbBG0pmZgDYBR2rW2RERkxExOTExMUitZjZE/Zztv1DS\nmur2ecAfAweB54A/q+52C/B0W0Wa2fD1M4ffBmCXpDF6fywej4j/kPRL4DFJfwv8N/Bwi3XOye2m\n4fB+zGne8EfEPuCKOZa/Qe/1v5ktQX6Hn1lSDr9ZUg6/WVIOv1lSDr9ZUoqY84157WxMehP4v+rH\ndcBbnW28nuv4LNfxWUutjt+PiAv7ecBOw/+ZDUtTETE5ko27DtfhOvy03ywrh98sqVGGf8cItz2b\n6/gs1/FZX9g6Rvaa38xGy0/7zZIaSfglXSvpV5Jel7R9FDVUdRyS9KqkvZKmOtzuTknTkvbPWnaB\npD3VhKh7JK0dUR13S/pdtU/2SrqugzoukfScpIPVJLF3VMs73SeFOjrdJ51NmhsRnX4BY/SmAfsy\nsBx4Bbi86zqqWg4B60aw3a8DVwL7Zy37O2B7dXs78KMR1XE38Jcd748NwJXV7VXA/wKXd71PCnV0\nuk8AASur2+PAC/Qm0HkcuKla/k/A9wbZziiO/FuB1yPijYg4ATwGXD+COkYmIp4H3j5r8fX0JkKF\njiZEramjcxFxNCJerm5/QG+ymI10vE8KdXQqelqfNHcU4d8I/HbWz6Oc/DOAn0p6SdK2EdVwxkUR\ncRR6v4TA+hHWcrukfdXLgtZffswm6VJ680e8wAj3yVl1QMf7pItJc0cR/rmmjRlVy+HqiLgS+FPg\n+5K+PqI6FpMHgMvoXaPhKHBvVxuWtBJ4ArgzIt7vart91NH5PokBJs3t1yjCfxi4ZNbPtZN/ti0i\njlTfp4GnGO3MRMckbQCovk+PooiIOFb94p0GHqKjfSJpnF7gHomIJ6vFne+TueoY1T6ptr3gSXP7\nNYrwvwhsrs5cLgduAnZ3XYSk8yWtOnMb+Bawv7xWq3bTmwgVRjgh6pmwVW6kg32i3iSCDwMHI+K+\nWUOd7pO6OrreJ51NmtvVGcyzzmZeR+9M6q+BvxpRDV+m12l4BTjQZR3Ao/SePn5K75nQrcDvAc8C\nr1XfLxhRHf8CvArsoxe+DR3U8Yf0nsLuA/ZWX9d1vU8KdXS6T4A/oDcp7j56f2j+etbv7C+A14F/\nA1YMsh2/w88sKb/Dzywph98sKYffLCmH3ywph98sKYffLCmH3ywph98sqf8HfSs6gwx+hd8AAAAA\nSUVORK5CYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvFvnyVgAABSRJREFUeJzt3b1uE1sYQNExP00AgRAUSNBFVPCM\niGfjFah4AZBAaUAgiJLc5jb3ynOUjEw89l6rnIPtSWDrSP449ubq6moCeu7s+waA/RA/RIkfosQP\nUeKHKPFDlPghSvwQJX6IunebL/b+/Xv/nRD+snfv3m2u8+fs/BAlfogSP0SJH6LED1HihyjxQ5T4\nIUr8ECV+iBI/RIkfosQPUbd6qo//+hvfmbDZXOtA17Utvcdd3we7Z+eHKPFDlPghSvwQJX6I8m4/\nB8HUYffs/BAlfogSP0SJH6LED1HihyijPo7a3IjQCNDOD1nihyjxQ5T4IUr8ECV+iDLq+5/R6THj\nIY6JnR+ixA9R4oco8UOU+CFK/BCVHPX9ja/JgkNj54co8UOU+CFK/BAlfogSP0Qd7ajPOA/G7PwQ\nJX6IEj9EiR+ixA9R4oco8UOU+CFK/BAlfogSP0SJH6KO9mAP3LZD+6o3Oz9EiR+ixA9R4oco8UOU\n+CHKqC9iNGoajagObXy1Vmv8Pdr5IUr8ECV+iBI/RIkfosQPUUZ9R+bu3bs3uj5N0/Tnz5/ZtfPz\n8xu/1jRN0717/mmtnZ0fosQPUeKHKPFDlPghSvwQZR6zUktPgZ2cnGy9/uDBg9nHfPnyZXbt7Ozs\nxq81TdP0+PHjrdeXni5k9+z8ECV+iBI/RIkfosQPUeKHKKO+lbq4uJhdG52me/bs2dbrL1++nH3M\naNT36dOn2bVXr17Nrj158mTr9Tt35veb0c/M7tn5IUr8ECV+iBI/RIkforzbv0ejgyyXl5eza6N3\nzF+8eLH1+tu3b2cf8+HDh9m1jx8/zq6NPqfv9PR06/XRpGL0Mzv0s3t2fogSP0SJH6LED1Hihyjx\nQ5RR30qNxl4jDx8+3Hr9+fPni57v69evs2vfv3+/8fONxpTcLn8TECV+iBI/RIkfosQPUeKHKKO+\nlVo6Evvx48fW66OR3ejE3GhE+OjRo+vf2L+WjjDZPTs/RIkfosQPUeKHKPFDlPghyqhvjzabzeza\naNQ3etznz5+3Xh99cObImzdvZtfmPix0mubHh6Ov5PIhnbfLzg9R4oco8UOU+CFK/BAlfogy6lup\n0WhuNOr79u3b1uu/fv1adB+vX7+eXTs5OZldmxvbOdW3HnZ+iBI/RIkfosQPUeKHKO/2r9ToHf2R\nnz9/br3++/fvRc/39OnT2bUlh4Uc3lkPOz9EiR+ixA9R4oco8UOU+CHKqO/IzH1G3tIDNffv359d\nWzqOZB3s/BAlfogSP0SJH6LED1Hihyijvoilp+mM83Zjjb9HOz9EiR+ixA9R4oco8UOU+CHKqA92\nZI3jvBE7P0SJH6LED1HihyjxQ5T4IUr8ECV+iBI/RIkfosQPUeKHqKM92DM6ZLH08+zgmNj5IUr8\nECV+iBI/RIkfosQPUUc76hsxBgQ7P2SJH6LED1HihyjxQ5T4ISo56hs5tK9c2gWjzyY7P0SJH6LE\nD1HihyjxQ5T4Icqoj6NWHN1el50fosQPUeKHKPFDlPghSvwQZdTHQTCy2z07P0SJH6LED1Hihyjx\nQ5T4Icqob48OYXx1CPfIMnZ+iBI/RIkfosQPUeKHKPFDlPghSvwQJX6IEj9EiR+ixA9R4oco8UOU\n+CFK/BAlfogSP0SJH6I2V1dX+74HYA/s/BAlfogSP0SJH6LED1HihyjxQ5T4IUr8ECV+iBI/RIkf\nosQPUeKHKPFDlPghSvwQJX6IEj9EiR+ixA9R4oco8UPUP8P2poAeA/XDAAAAAElFTkSuQmCC\n",
       "text/plain": [
        "<Figure size 432x288 with 1 Axes>"
       ]
@@ -72,7 +72,8 @@
    ],
    "source": [
     "gs = gf.make_gabor(params, 32, 32)\n",
-    "plt.imshow(np.squeeze(gs), cmap='gray')"
+    "plt.imshow(np.squeeze(gs), cmap='gray')\n",
+    "plt.axis('off')"
    ]
   },
   {
